style: finished about section responsiveness and added localized images

--- a/source/layouts/page.astro
+++ b/source/layouts/page.astro
@@ -109,7 +109,7 @@ const t = getTranslations(locale);
   <body
     {...props}
     class={cn(
-      "relative overflow-x-scroll fold:overflow-x-clip font-sans antialiased",
+      "relative overflow-x-auto fold:overflow-x-clip font-sans antialiased",
       clazz,
     )}
   >
