--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -25,19 +25,19 @@ const t = translations.sections.about;
     ]}
   >
     <AtWork
-      class="relative col-span-10 col-start-1 px-8 pb-0 pt-8 lg:col-span-6"
+      class="relative col-span-10 col-start-1 px-6 pb-0 pt-6 md:px-8 md:pt-8 lg:col-span-6"
     />
 
     <PersonalSide
-      class="col-span-10 col-start-1 py-8 *:px-8 lg:col-span-4 lg:col-start-7"
+      class="col-span-10 col-start-1 p-6 md:p-8 lg:col-span-4 lg:col-start-7"
     />
 
     <Location
-      class="[@media(width<=880px)]:@container col-span-10 col-start-1 p-8 [@media(width>=880px)]:col-span-4"
+      class="col-span-10 col-start-1 p-6 md:p-8 [@media(width<=880px)]:@container [@media(width>=880px)]:col-span-4"
     />
 
     <Education
-      class="col-span-10 col-start-1 p-8 lg:col-span-6 lg:col-start-5 [@media(width>=880px)]:col-span-6 [@media(width>=880px)]:col-start-5"
+      class="col-span-10 col-start-1 p-6 md:p-8 lg:col-span-6 lg:col-start-5 [@media(width>=880px)]:col-span-6 [@media(width>=880px)]:col-start-5"
     />
   </div>
 </Section>
