--- a/source/layouts/section.astro
+++ b/source/layouts/section.astro
@@ -69,6 +69,8 @@ const { order = 1, title, ...props } = Astro.props;
 
     const observer = new IntersectionObserver(
       (entries) => {
+        console.log(entries);
+
         // Update the state of each section.
         for (const entry of entries) {
           // The ID is an enforced prop, so we can safely assume it exists.
@@ -88,7 +90,7 @@ const { order = 1, title, ...props } = Astro.props;
         }
       },
       {
-        threshold: 0.5,
+        threshold: 0.3,
         rootMargin: getComputedStyle(document.documentElement).getPropertyValue(
           "--header-height",
         ),
@@ -134,24 +136,4 @@ const { order = 1, title, ...props } = Astro.props;
     font-size: 0.8em;
     margin-right: 0.5em;
   }
-
-  /* h2::after {
-    content: "";
-    width: 120%;
-    height: 2px;
-
-    position: absolute;
-    top: calc(50% + 2px);
-
-    display: none;
-    margin-left: 0.6em;
-    background-color: theme("colors.muted.DEFAULT");
-  } */
-
-  /*  @media screen(sm) {
-    h2::after {
-      display: inline-block;
-      text-align: left;
-    }
-  } */
 </style>
