refactor: use translations object from Astro.locals

--- a/source/components/base/noscript.astro
+++ b/source/components/base/noscript.astro
@@ -1,8 +1,5 @@
 ---
-import { getTranslations } from "@app/modules/i18n";
-
-const { locale } = Astro.locals;
-const translations = getTranslations(locale);
+const { translations } = Astro.locals;
 const t = translations.noscript;
 ---
 
