--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -1,25 +1,21 @@
 ---
 import type { GetStaticPaths } from "astro";
 import { Icon } from "astro-icon/components";
+import { fade, slide } from "astro:transitions";
 
-import { Page } from "@app/layouts";
-import { createStaticPathsHandler, getTranslations } from "@modules/i18n";
+import { Page, Header, Footer } from "@app/layouts";
+import { Work, Projects, About, Hero, Contact } from "@app/sections";
 
+import { createStaticPathsHandler } from "@modules/i18n";
+
+import { Toaster } from "@components/ui/react";
+import ScrollToTop from "@app/components/scroll-to-top.svelte";
 import ParticlesCanvas from "@components/particles/particle-canvas.astro";
 
-import Header from "@app/layouts/header.astro";
-import Footer from "@app/layouts/footer.astro";
-
-import { Work, Projects, About, Hero, Contact } from "@app/sections";
-import { fade, slide } from "astro:transitions";
-import ScrollToTop from "@app/components/scroll-to-top.svelte";
-import { Toaster } from "@components/ui/react";
-
 export const getStaticPaths =
-createStaticPathsHandler() satisfies GetStaticPaths;
+  createStaticPathsHandler() satisfies GetStaticPaths;
 
-const { locale } = Astro.locals;
-const t = getTranslations(locale);
+const { translations: t } = Astro.locals;
 ---
 
 <script>
@@ -43,13 +39,7 @@ const t = getTranslations(locale);
   withNoScriptFallback
   withViewTransitions
 >
-  <Header class="overflow-x-auto fold:overflow-x-clip">
-    <!-- <div
-      data-scroll-progress
-      class="absolute inset-x-0 h-1 w-full bg-secondary/80"
-    >
-    </div> -->
-  </Header>
+  <Header class="overflow-x-auto fold:overflow-x-clip" />
 
   <main
     vaul-drawer-wrapper
