refactor: temporarily remove archive

--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -95,7 +95,7 @@ const currentDescription = next.description(locale);
     </div>
   </div>
 
-  <div class="mx-4 mb-6 mt-12 sm:mx-12 lg:mt-24">
+  <!-- <div class="mx-4 mb-6 mt-12 sm:mx-12 lg:mt-24">
     <p class="text-pretty text-right text-lg font-medium sm:text-xl xl:mr-10">
       <span class="text-foreground/80">{t.seeMore}</span>
       <Link
@@ -111,7 +111,7 @@ const currentDescription = next.description(locale);
         />
       </Link>
     </p>
-  </div>
+  </div> -->
 </Section>
 
 <style>
