fix: accessibility issues in a couple of elements

--- a/source/sections/about/components/personal-side.astro
+++ b/source/sections/about/components/personal-side.astro
@@ -33,6 +33,7 @@ const t = translations.sections.about.bento.aboutMe;
         src="/images/emojis/hand/hand.gif"
         width={64}
         height={64}
+        alt={t.iconAlt}
         decoding="async"
         loading="lazy"
         class="size-[1.5em]"
