--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -64,6 +64,7 @@ const { translations: t } = Astro.locals;
     <ScrollToTop
       name={t.misc.scrollToTop}
       class="pointer-events-auto absolute -bottom-32 right-0 m-6 aspect-square size-12 min-h-12 min-w-12 rounded-full lg:m-12 xl:size-16 xl:min-h-16 xl:min-w-16 xl:p-2"
+      aria-label={t.misc.scrollToTop}
       data-tippy-content={t.misc.scrollToTop}
       data-tippy-placement="top"
       data-scroll-to-top
